Hia 657 allow filter case note by multiple type and optional sub types (#341)
* update getCasesNotes to get notes based all combination of type and subtypes

* Add unit tests for getCaseNotes method

* refactor caseNoteTypeSubTypes to be string

* Add smoke test

* lint

* Add controller tests

* Update caseNoteTypeSubTypes examples

* Remove unused variable caseNotes

* Update test method names

* Rename .java to .kt

* Refactor to support filter case note by multiple type and optional sub types

* Format and added validation for CaseNoteFilter that SubType must used in conjunction with type

* Resolve comments